# python-collab-template

./: .actrc  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  setup.py  sitemap.xml
.github/workflows/: ci-debug.yml  docs.yml  tests.yml
container-setup/: index.html
docker/: Dockerfile  Makefile  docker-compose.yml  template.env
docs/: container-setup.md  getting-started.md  index.md
docs/reference/: api.md
getting-started/: index.html
reference/api/: index.html
scripts/: init_project.py
search/: search_index.json
src/: example.py
src/data_prep/: categorical.py  continuous.py
templates/: mkdocs.yml.template
templates/docs/: getting-started.md.template  index.md.template
templates/docs/reference/: api.md.template
tests/: test_docs_setup.py  test_example.py
