[project]
name = "python-collab-template"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "alex furrier", email = "afurrier@gmail.com" }
]
requires-python = ">= 3.8"
readme = "README.md"
dependencies = []  # No runtime dependencies needed for example

[project.optional-dependencies]
dev = [
    "mypy>=1.9.0",      # Type checking
    "pytest>=8.1.1",    # Testing
    "pytest-cov>=5.0.0", # Coverage reporting
    "ruff>=0.3.0",      # Linting and formatting
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
